package com.bartlomiejpluta.base.proto;

option java_package = "com.bartlomiejpluta.base.proto";
option java_outer_classname = "ProjectProto";

message Project {
  required string name = 1;
  required string runner = 2;
  repeated GameMapAsset maps = 3;
  repeated TileSetAsset tileSets = 4;
  repeated ImageAsset images = 5;
  repeated EntitySetAsset entitySets = 6;
}

message GameMapAsset {
  required string uid = 1;
  required string source = 2;
  required string name = 3;
}

message TileSetAsset {
  required string uid = 1;
  required string source = 2;
  required string name = 3;
  required uint32 rows = 4;
  required uint32 columns = 5;
}

message ImageAsset {
  required string uid = 1;
  required string source = 2;
  required string name = 3;
}

message EntitySetAsset {
  required string uid = 1;
  required string source = 2;
  required string name = 3;
  required uint32 rows = 4;
  required uint32 columns = 5;
}